k3s/netbird/dashboard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: dashboard
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
      labels:
        io.kompose.service: dashboard
    spec:
      containers:
        - envFrom:
            - configMapRef:
                name: dashboard-env
          image: netbirdio/dashboard:latest
          name: netbird-dashboard
          ports:
            - containerPort: 80
              protocol: TCP
      restartPolicy: Always
