k3s/netbird/netbird-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
    traefik.enable: "true"
    traefik.http.routers.netbird-backend.entrypoints: websecure
    traefik.http.routers.netbird-backend.rule: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/relay`) || PathPrefix(`/ws-proxy/`) || PathPrefix(`/api`) || PathPrefix(`/oauth2`))
    traefik.http.routers.netbird-backend.service: netbird-server
    traefik.http.routers.netbird-backend.tls: "true"
    traefik.http.routers.netbird-grpc.entrypoints: websecure
    traefik.http.routers.netbird-grpc.rule: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/signalexchange.SignalExchange/`) || PathPrefix(`/management.ManagementService/`))
    traefik.http.routers.netbird-grpc.service: netbird-server-h2c
    traefik.http.routers.netbird-grpc.tls: "true"
    traefik.http.services.netbird-server-h2c.loadbalancer.server.port: "80"
    traefik.http.services.netbird-server-h2c.loadbalancer.server.scheme: h2c
    traefik.http.services.netbird-server.loadbalancer.server.port: "80"
  labels:
    io.kompose.service: netbird-server
  name: netbird-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: netbird-server
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.38.0 (a8f5d1cbd)
        traefik.enable: "true"
        traefik.http.routers.netbird-backend.entrypoints: websecure
        traefik.http.routers.netbird-backend.rule: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/relay`) || PathPrefix(`/ws-proxy/`) || PathPrefix(`/api`) || PathPrefix(`/oauth2`))
        traefik.http.routers.netbird-backend.service: netbird-server
        traefik.http.routers.netbird-backend.tls: "true"
        traefik.http.routers.netbird-grpc.entrypoints: websecure
        traefik.http.routers.netbird-grpc.rule: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/signalexchange.SignalExchange/`) || PathPrefix(`/management.ManagementService/`))
        traefik.http.routers.netbird-grpc.service: netbird-server-h2c
        traefik.http.routers.netbird-grpc.tls: "true"
        traefik.http.services.netbird-server-h2c.loadbalancer.server.port: "80"
        traefik.http.services.netbird-server-h2c.loadbalancer.server.scheme: h2c
        traefik.http.services.netbird-server.loadbalancer.server.port: "80"
      labels:
        io.kompose.service: netbird-server
    spec:
      containers:
        - args:
            - --config
            - /etc/netbird/config.yaml
          image: netbirdio/netbird-server:latest
          name: netbird-server
          ports:
            - containerPort: 3478
              protocol: UDP
          volumeMounts:
            - mountPath: /var/lib/netbird
              name: netbird-data
            - mountPath: /etc/netbird/config.yaml
              name: netbird-server-cm1
              subPath: config.yaml
      restartPolicy: Always
      volumes:
        - name: netbird-data
          persistentVolumeClaim:
            claimName: netbird-data
        - configMap:
            items:
              - key: config.yaml
                path: config.yaml
            name: netbird-server-cm1
          name: netbird-server-cm1
