k3s/netbird/dashboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.38.0 (a8f5d1cbd)
  labels:
    io.kompose.service: dashboard
  name: dashboard
spec:
  ports:
    - name: "http"
      port: 80
      targetPort: 80
  selector:
    io.kompose.service: dashboard
