k3s/netbird/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird-backend
  namespace: netbird
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/relay`) || PathPrefix(`/ws-proxy/`) || PathPrefix(`/api`) || PathPrefix(`/oauth2`))
      kind: Rule
      services:
        - name: netbird-server
          port: 80
  tls:
    secretName: netbird-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird-grpc
  namespace: netbird
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbird.mafmanhomelab.dedyn.io`) && (PathPrefix(`/signalexchange.SignalExchange/`) || PathPrefix(`/management.ManagementService/`))
      kind: Rule
      services:
        - name: netbird-server
          port: 80
          scheme: h2c
  tls:
    secretName: netbird-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: netbird-dashboard
  namespace: netbird
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`netbird.mafmanhomelab.dedyn.io`)
      kind: Rule
      services:
        - name: dashboard
          port: 80
  tls:
    secretName: netbird-tls
